--- a/package.json
+++ b/package.json
@@ -11,13 +11,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.1.2",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/flex-layout": "^13.0.0-beta.36",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.1.2",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "@progress/kendo-angular-grid": "^6.0.0",
+    "@progress/kendo-angular-intl": "^3.1.2",
+    "@progress/kendo-angular-pdf-export": "^3.0.3",
+    "angular-notifier": "^9.1.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
