--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,9 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictNullChecks": false,
+    "strictTemplates": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "strictPropertyInitialization": false,
   }
 }
